# limn

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .lycheeignore  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  book.toml  codecov.yml  deny.toml  lefthook.yml  release-please-config.json
.cargo/: mutants.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  code-metrics.yml  coverage.yml  debt-metrics.yml  deny.yml  docs.yml  gitleaks.yml  labels.yml  link-check.yml  mutants.yml
.skillshare/: OVERVIEW.md  config.yaml
.skillshare/skills/commit-message/: SKILL.md
.skillshare/skills/design/adr-acceptance/: SKILL.md
.skillshare/skills/design/adr-proposal/: SKILL.md
.skillshare/skills/release/post-release-followup/: SKILL.md
.skillshare/skills/release/release-confirmation/: SKILL.md
.skillshare/skills/release/release-preparation/: SKILL.md
.skillshare/skills/verify/adr-consistency-check/: SKILL.md
.skillshare/skills/verify/adr-required-check/: SKILL.md
.skillshare/skills/verify/changelog-untouched-check/: SKILL.md
.skillshare/skills/verify/conventional-commits-check/: SKILL.md
.skillshare/skills/verify/doc-language-check/: SKILL.md
.skillshare/skills/write-adr/: SKILL.md
.skillshare/trace/: feature-inventory.md  gpl-deps.md  open-questions.md  upstream-gpui.md
assets/: README.md
crates/debt-scan/: Cargo.toml
crates/debt-scan/src/: main.rs  report.rs  scanner.rs
crates/editor-core/: Cargo.toml
crates/editor-core/src/: block.rs  completion.rs  markdown.rs
crates/editor-service/: Cargo.toml
crates/editor-service/src/: index.rs
crates/editor-ui/: Cargo.toml
crates/limn-core/: CHANGELOG.md  Cargo.toml
crates/limn-core/src/: block.rs  completion.rs  lib.rs  markdown.rs
crates/limn-core/tests/: parse.rs  roundtrip.rs
crates/limn-doc-preprocessor/: Cargo.toml  README.md
crates/limn-doc-preprocessor/src/: main.rs
crates/limn-service/: CHANGELOG.md  Cargo.toml
crates/limn-service/examples/: dump-config.rs
crates/limn-service/src/: config.rs  index.rs  lib.rs  vault.rs
crates/limn-service/tests/: integration.rs
crates/limn-ui/: Cargo.toml  build.rs
crates/limn-ui/src/: actions.rs  config_global.rs  editor.rs  feature_flags.rs  lib.rs  main.rs  palette.rs  settings.rs  shell.rs  theme.rs  welcome.md
crates/limn-ui/tests/: e2e_render.rs
docs/: README.md  SUMMARY.md  basic-features.md  debt.md  spec-handoff-gpui.md  spec-handoff.md  testing-strategy.md
docs/adr/: 0001-adopt-gpui.md  0002-three-crate-layered-architecture.md  0003-temporarily-accept-gpl-contamination.md  0004-scope-skillshare-to-oss-operations.md  0005-adopt-gpui-component-input-and-autosave-raw-text.md  0005-app-icon-runtime-and-embed.md  0005-persist-settings-in-config-toml.md  0006-defer-runtime-icon-macos-windows.md  0006-reserved.md  0007-user-configuration-via-toml-file.md  0008-command-palette-and-view-switching-via-gpui-actions.md  0009-fuzzy-open-file-and-buffer-swap.md  0010-settings-view-and-view-switching.md  0011-adopt-limn-visual-language-as-color-source-of-truth.md  README.md  template.md
docs/debt/: allowlist.json  baseline.json  dashboard.md
docs/design/: basic-features.md  testing-strategy.md  visual-language.md
docs/development/: feature-flags.md  flag-inventory.md  git-strategy.md
docs/maintainer-runbook/: release-public.md
samples/: hello.md
scripts/helpers/: lib.sh
scripts/release/: post-release-followup.sh  release-confirmation.sh  release-preparation.sh
scripts/verify/: adr-consistency-check.sh  adr-required-check.sh  changelog-untouched-check.sh  conventional-commits-check.sh  doc-language-check.sh  skills-self-check.sh
