[workspace]
resolver = "2"
members = [
    "crates/editor-core",
    "crates/editor-service",
    "crates/editor-ui",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sat0-hir0/editor"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
