[package]
name = "debt-scan"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
# Internal dev tool — never shipped, not tracked by release-please.

[[bin]]
name = "debt-scan"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
