[package]
name = "editor-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
editor-core = { path = "../editor-core" }
editor-service = { path = "../editor-service" }

[[bin]]
name = "editor-ui"
path = "src/main.rs"
