[package]
name = "limn-doc-preprocessor"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
description = "mdBook preprocessor that validates doc integrity for the Limn project"

[[bin]]
name = "limn-doc-preprocessor"
path = "src/main.rs"

[dependencies]
mdbook = "0.4"
serde_json = "1"
anyhow = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
