[package]
name = "limn-doc-preprocessor"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
description = "mdBook preprocessor that validates doc integrity for the Limn project"

[[bin]]
name = "limn-doc-preprocessor"
path = "src/main.rs"

[dependencies]
# Intentionally no `mdbook` dependency. We talk to mdBook only via its
# stdin/stdout JSON protocol, walked as serde_json::Value, so the
# preprocessor is decoupled from mdbook's struct definitions and
# survives upstream additions of new optional config fields.
serde_json = "1"
anyhow = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
