[package]
name = "limn-service"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
limn-core = { path = "../limn-core" }
# Config (Wave 7, ADR-0007). All three already exist in the lock graph
# (via shellexpand / rust-i18n / gpui), so adding them here introduces no
# new crate and needs no deny.toml change. `toml` is pinned to 0.8 to
# match the 0.8.x already in the graph (avoids a multiple-versions warn).
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"

[dev-dependencies]
tempfile = "3"
