[package]
name = "limn-service"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
limn-core = { path = "../limn-core" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

[dev-dependencies]
tempfile = "3"
