[package]
name = "limn-ui"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
limn-core = { path = "../limn-core" }
limn-service = { path = "../limn-service" }
gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
# Fuzzy matcher for the palette's "Open File" search. MPL-2.0 (already
# in deny.toml's allow list) — chosen over zed's GPL-3.0 fuzzy crate to
# keep GPL surface minimal (ADR-0003, ADR-0009).
nucleo-matcher = "0.3"

[dev-dependencies]
# Need the `test-support` feature so `#[gpui::test]` resolves
# `TestAppContext` and the `run_test` helper.
gpui = { workspace = true, features = ["test-support"] }
# Wave 8 settings save test writes to a tempfile rather than the user's
# real `~/.config/limn/config.toml`. Already in the lock graph via
# limn-service's dev-dependencies — adding it here introduces no new crate.
tempfile = "3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "limn-ui"
path = "src/main.rs"
